# platform.upstream.xf86-video-vmware

./: .gbs.conf  .gitignore  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  project.config  xf86-video-vmware-12.0.2_007bed3.tar.bz2.delta  xf86-video-vmware-12.0.2_007bed3.tar.bz2.id
man/: .gitignore  Makefile.am  Makefile.in  vmware.man
packaging/: xf86-video-vmware.spec
saa/: Makefile.am  Makefile.in  saa.c  saa.h  saa_accel.c  saa_priv.h  saa_render.c  saa_unaccel.c
src/: Makefile.am  Makefile.in  bits2pixels.c  bits2pixels.h  includeCheck.h  offscreen_manager.c  offscreen_manager.h  svga_limits.h  svga_modes.h  svga_overlay.h  svga_reg.h  vm_basic_types.h  vmware.c  vmware.h  vmware_bootstrap.c  vmware_bootstrap.h  vmwarectrl.c  vmwarectrl.h  vmwarectrlproto.h  vmwarecurs.c  vmwaremodes.c  vmwaremodule.c  vmwarevideo.c  vmwarexaa.c  vmwarexinerama.c
vmwarectrl/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure.ac  libvmwarectrl.c  vmwarectrl.c
vmwgfx/: Makefile.am  Makefile.in  vmwgfx_bootstrap.c  vmwgfx_crtc.c  vmwgfx_ctrl.c  vmwgfx_dri2.c  vmwgfx_driver.c  vmwgfx_driver.h  vmwgfx_drm.h  vmwgfx_drmi.c  vmwgfx_drmi.h  vmwgfx_hosted.c  vmwgfx_hosted.h  vmwgfx_hosted_priv.h  vmwgfx_output.c  vmwgfx_overlay.c  vmwgfx_saa.c  vmwgfx_saa.h  vmwgfx_saa_priv.h  vmwgfx_tex_video.c  vmwgfx_xa_composite.c  vmwgfx_xa_surface.c  vmwgfx_xmir.c
